# PixelArt3D

./: CMakeLists.txt  CODE_DOCUMENTATION.md  README.md
include/: Camera.h  Framebuffer.h  Light.h  Material.h  Model.h  Shader.h
shaders/: fragment.glsl  pixelate.fs  vertex.glsl
src/: Camera.cpp  Framebuffer.cpp  Model.cpp  Shader.cpp  main.cpp
